@@ -5,6 +5,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import dev.langchain4j.data.document.Document;
 import dev.langchain4j.data.document.Metadata;
 import eu.luminis.searchai.service.IngestService;
+import org.springframework.util.ResourceUtils;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
@@ -28,19 +29,19 @@ public class IngestController {
     public String startIngestion() {
         try {
             ObjectMapper mapper = new ObjectMapper();
-            List<BlogPost> documents = mapper.readValue(Paths.get("classpath:data/all_documents").toFile(), new TypeReference<>() {
+            List<BlogPost> documents = mapper.readValue(ResourceUtils.getFile("classpath:data/all_documents.json"), new TypeReference<>() {
             });
             List<Document> documentList = documents.stream().map(blogPost -> {
-                Metadata metadata = new Metadata();
-                metadata.add("postId", blogPost.postId());
-                metadata.add("title", blogPost.title());
-                metadata.add("url", blogPost.url());
-                metadata.add("updatedAt", blogPost.updatedAt());
-                metadata.add("body", blogPost.body());
-                metadata.add("tags", String.join(",", blogPost.tags()));
-                metadata.add("categories", String.join(",", blogPost.categories()));
-                return new Document(blogPost.body(), metadata);
-            }).collect(Collectors.toList());
+//                Metadata metadata = new Metadata();
+//                metadata.add("postId", blogPost.post_id());
+//                metadata.add("title", blogPost.title());
+//                metadata.add("url", blogPost.url());
+//                metadata.add("updatedAt", blogPost.updated_at());
+//                metadata.add("body", blogPost.body());
+//                metadata.add("tags", String.join(",", blogPost.tags()));
+//                metadata.add("categories", String.join(",", blogPost.categories()));
+                return Document.from(blogPost.title());
+            }).toList();
 
             ingestService.ingestDocuments(documentList);
 
